# spirv-reflect-rs

./: .gitmodules  .travis.yml  CHANGES.md  Cargo.toml  README.md  bindgen.sh  build.rs  rustfmt.toml
examples/: demo.rs  sample.hlsl  sample.yaml
src/: convert.rs  ffi.rs  lib.rs  parser.rs  types.rs
src/types/: descriptor.rs  generator.rs  image.rs  mod.rs  module.rs  op.rs  resource.rs  traits.rs  variable.rs
tests/: ImGuiPs.spirv  mod.rs
