[package]
name = "spirv-reflect"
version = "0.2.4"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
description = "Reflection API in rust for SPIR-V shader byte code, intended for Vulkan applications."
homepage = "https://github.com/gwihlidal/spirv-reflect-rs"
repository = "https://github.com/gwihlidal/spirv-reflect-rs"
documentation = "https://docs.rs/spirv-reflect"
readme = "README.md"
keywords = ["shader", "spirv", "glsl", "hlsl", "reflect"]
categories = ["rendering", "rendering::engine", ]
license = "MIT/Apache-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "gwihlidal/spirv-reflect-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
bitflags = "1.2.1"
spirv_headers = "1.3.4"
num-traits = "0.2.10"
serde = "1.0"
serde_derive = "1.0.103"

[dev-dependencies]
serde_yaml = "0.8.11"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
